[gd_scene load_steps=3 format=3 uid="uid://cvevw2wfo88m5"]

[ext_resource type="Theme" uid="uid://bj2q0bvxlmix" path="res://Assets/GUI/Fonts/Theme.tres" id="1_e7sio"]
[ext_resource type="Script" path="res://Assets/GUI/JoinGame/JoinGame.gd" id="1_l64uu"]

[node name="JoinGame" type="CanvasLayer"]
script = ExtResource("1_l64uu")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 107.0
offset_top = 99.0
offset_right = -107.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e7sio")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = -20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Enter in your game invite code below to join."
horizontal_alignment = 1
vertical_alignment = 1

[node name="EntryContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="AddressEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/EntryContainer"]
layout_mode = 2

[node name="ButtonContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 120

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="JoinButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "Join Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
